pod-resource-requests.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-sample
  labels:
    name: sample-pod
spec:
  containers:
  - name: pod-one
    image: nginx
    ports:
      - containerPort: 8080
    resources: 
      requests: 
        memory: "1Gi"
        cpu: 1
      limits:
        memory: "2Gi"
        cpu: 2
