tolerations-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
spec:
  containers:
    - name: nginx
      image: nginx
  tolerations:
    - key:"app"
      operator: "Equal"
      value: "blue"
      effect: "NoSchedule"
