service_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      # if node is not specificed randomly a port is assigned.
      nodePort: 30008
  selector:
    app: myapp
    type: front-end
