networkpolicy.yml
apiVersion: v1
kind: NetworkPolicy
metadata:
    name: db-policy
spec:
    podSelctor: 
        matchLabels:
            role: db
    policyTypes:
    - Ingress
    ingress:
    - from:
      - podSelector:
          matchLabels:
            name: api-pod
      ports:
      - protocol: TCP
        port: 3306
